--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Titan+One&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 100%;
+    /* font-family: 'Abel', sans-serif; */
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1, h2, h3,h4, h5, h5 {
+    font-family: 'Titan One', cursive;
+}
+
+button, a {
+    cursor: pointer;
 }
